# AI-BUDDY-Latest-Backup

./: .breakpoints  README.md  admin_reports.py  auth.py  cbt.py  challenge_routes.py  chat.py  check_ports.py  check_user.py  check_users.py  cookies.txt  create_fork_with_users.py  create_new_fork.py  dashboard.py  deploy_to_github.py  deployment_config.py  enhanced_fork_creator.py  extensions.py  fasting.py  food_tracker.py  fork_data_migration.py  fork_verification_report_20250503_224522.json  fork_verification_report_20250503_225625.json  fork_verification_report_20250503_231143.json  fork_verification_report_20250503_232539.json  fork_verification_report_20250503_233227.json  fork_verification_report_20250503_234126.json  fork_verification_report_20250503_234451.json  fork_verification_report_20250504_001039.json  fork_verification_report_20250504_001356.json  fork_verification_report_20250504_001754.json  fork_verification_report_20250504_001846.json  fork_verification_report_20250504_002104.json  fork_verification_report_20250505_103803.json  fork_verification_report_20250505_103901.json  fork_verification_report_20250505_104023.json  fork_verification_report_20250505_104133.json  fork_verification_report_20250505_104409.json  fork_verification_report_20250505_212247.json  fork_verification_report_20250505_213156.json  (+127 more)
backup_system/: __init__.py  backup_manager.py  backup_state.py  backup_verification.py
static/: manifest.json
templates/: 404.html  500.html  act_coaching.html  admin_dashboard.html  base.html  cbt_coaching.html  chat.html  dashboard.html  (+10 more)
(+154 files in other folders)
