[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-migrate>=4.0.7",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.0.0",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.4",
    "trafilatura>=2.0.0",
    "requests>=2.32.3",
    "openai>=1.58.1",
    "oauthlib>=3.2.2",
    "tzdata>=2024.2",
    "twilio>=9.4.1",
    "markupsafe>=3.0.2",
    "itsdangerous>=2.2.0",
    "flask-mail>=0.10.0",
    "alembic>=1.14.0",
    "bcrypt>=4.2.1",
    "gunicorn>=23.0.0",
    "flask-cors>=5.0.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "validators>=0.34.0",
    "slack-sdk>=3.34.0",
    "lz4>=4.3.3",
    "gtts>=2.5.4",
    "pyttsx3>=2.98",
    "anthropic>=0.45.2",
    "sendgrid>=6.11.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "reportlab>=4.3.1",
    "pdfkit>=1.0.0",
    "wtforms>=3.2.1",
]
